--- a/Cyber/Red Team/.gitignore
+++ b/Cyber/Red Team/.gitignore
@@ -2,3 +2,9 @@ privateRed2
 publicRed2
 Cyber/Red Team/privateRed2.js
 Cyber/Red Team/privateRed2.js
+Red Team/privateRed2.js
+Red Team/privateRed2.js
+privateRed2.js
+privateRed2.js
+./privateRed2.js
+./privateRed2.js
