On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   .gitignore

Changes not staged for commit:
	modified:   Cyber/Red Team/privateRed2.js
	modified:   Cyber/Red Team/publicRed2.js

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,14 @@
 
 Cyber/Red Team/privateRed2.js
 Cyber/Red Team/publicRed2.js
+
+privateRed2
+publicRed2
+Cyber/Red Team/privateRed2.js
+Cyber/Red Team/privateRed2.js
+Red Team/privateRed2.js
+Red Team/privateRed2.js
+privateRed2.js
+privateRed2.js
+./privateRed2.js
+./privateRed2.js
